--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "firebase-admin": "^6.4.0",
     "node-schedule": "^1.3.1",
+    "request": "^2.88.0",
     "stripe": "^6.20.0"
   }
 }
