--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "asyncawait": "^1.0.7",
     "body-parser": "^1.18.3",
+    "dateformat": "^3.0.3",
     "express": "^4.16.4",
     "firebase-admin": "^6.4.0",
     "node-schedule": "^1.3.1",
